--- a/databaseFile/databaseStyle.css
+++ b/databaseFile/databaseStyle.css
@@ -20,24 +20,30 @@ body{
     
 }
 
-#username {
+#username, #projectTitle{
     margin: 5px;
     padding: 3px;
+    border-radius: .5rem;
+    border: white;
 }
 
 #password {
     margin: 5px;
     padding: 3px;
     margin-top: 10px;
+    border-radius: .5rem;
+    border: white;
 }
 #aForm {
 
     align-items: center;
     justify-content: center;
     display: inline-block;
+    border-radius: .5rem;
+    border: white;
 }
 
-.btn1 {
+.btn1, .btn2{
     display: inline-block;
     padding: 10px 20px;
     font-size: 16px;
@@ -52,8 +58,19 @@ body{
     transition: background-color 0.3s, color 0.3s;
 }
 
-.btn1:hover {
+.btn1:hover , .btn2:hover{
     background-color: #3498db;
     color: white;
     cursor: pointer;
+}
+
+#description {
+    height: 3rem;
+    width: 13rem;
+    border-radius: .5rem;
+    border: white;
+}
+
+#imageUp {
+    margin: .5rem;
 }
